changes on mail.py to allow cc and bcc contacts, also updated the email demostration showing how to use that

--- a/demos/email/static/index.html
+++ b/demos/email/static/index.html
@@ -32,6 +32,10 @@
         <input type="text" class="span4" name="to_addrs" placeholder="Email">
         <span class="help-inline">List of destination addresses, separated by comma</span>
 
+        <label>Bcc:</label>
+        <input type="text" class="span4" name="bcc_addrs" placeholder="Email">
+        <span class="help-inline">List of destination addresses hidden, separated by comma</span>
+
         <label>Subject:</label>
         <input type="text" class="span4" name="subject">
 
