implementation on mail.py, now keep the compliance with api and add support to cc and bcc

--- a/demos/email/static/index.html
+++ b/demos/email/static/index.html
@@ -11,7 +11,7 @@
     <![endif]-->
 
     <!-- Le styles -->
-    <link href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css" rel="stylesheet">
+    <link href="http://getbootstrap.com/2.3.2/assets/css/bootstrap.css" rel="stylesheet">
     <style>
       body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
@@ -31,6 +31,10 @@
         <label>To:</label>
         <input type="text" class="span4" name="to_addrs" placeholder="Email">
         <span class="help-inline">List of destination addresses, separated by comma</span>
+
+        <label>Cc:</label>
+        <input type="text" class="span4" name="cc_addrs" placeholder="Email">
+        <span class="help-inline">List of destination addresses as copy, separated by comma</span>
 
         <label>Bcc:</label>
         <input type="text" class="span4" name="bcc_addrs" placeholder="Email">
